Adjust mode 4 group scheduling